The "Notifications" menu item has been added with the number of notifications displayed. A page has been added "notifications.html" . Added a page for opening a specific idea (post) in reading mode - "viewIdea.html". A user profile page has been added - "profile.html" . Added the ability for the user to change his password. Added the ability for the administrator to change the password for any user. Implemented a tag filter and the ability to add new tags on all pages with the display of ideas. Added a "Tag Reference" page for administrators - "tagReference.html", where you can view a list of tags, search for the necessary tags, edit tags and delete tags. The backend of the "Anonymously" checkbox has been implemented on a page where you can send an idea Anonymously. Previously, only the displayed notification changed from this checkbox when sending an idea, now this checkbox really makes the idea anonymous. File uploading to the server and downloading files from the server have been redesigned, now you can configure the file download path that the server gives to the client - in "application.properties". The "Structural Unit" field has been added to the user's entity. There are many other improvements in the backend and frontend.